--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,7 @@
     "angular-sanitize": "~1.3.8",
     "angular-ui-router": "~0.2.12",
     "angularfire": "~1.1.2",
-    "bootstrap": "~3.2.0",
+    "bootstrap": "3.3.4",
     "extras.angular.plus": "~0.9.2",
     "firebase": "~2.2.9",
     "font-awesome": "~4.2.0",
@@ -31,6 +31,7 @@
     "toastr": "~2.1.0"
   },
   "resolutions": {
-    "bootstrap": "~3.3.4"
+    "bootstrap": "3.3.4",
+    "angular": "~1.3.8"
   }
 }
